--- a/payasan.cabal
+++ b/payasan.cabal
@@ -6,10 +6,10 @@ copyright:        Stephen Tetley <stephen.tetley@gmail.com>
 maintainer:       Stephen Tetley <stephen.tetley@gmail.com>
 homepage:         http://code.google.com/p/copperbox/
 category:         Music
-synopsis:         Score kit for MIDI.
+synopsis:         DSL for music composition / MIDI.
 description:
   .
-  DSL to generate MIDI tracks.
+  DSL for music composition / MIDI.
   .
   (c) Stephen Tetley 2015
   .
@@ -27,47 +27,31 @@ library
   build-depends:      base,
                       containers,
                       template-haskell,
+                      pretty,
                       parsec       >= 3.1   && <= 4.0,
-                      mtl          >= 2.0   && <= 3.0,
-                      zmidi-core   >= 0.7.0 && <= 1.0.0,
-                      vector-space >= 0.8.0 && <= 1.0.0
 
   exposed-modules:
-    Payasan.Base,
-    Payasan.Base.Advance,
-    Payasan.Base.Concat,
-    Payasan.Base.Context,
-    Payasan.Base.Event,
-    Payasan.Base.EventList,
-    Payasan.Base.Internal.Base,
-    Payasan.Base.Internal.Midi,
-    Payasan.Base.Internal.MidiOutput,
-    Payasan.Base.Internal.Pitch,
+    Payasan.Base.Duration,
+    Payasan.Base.Internal.ABCInTrans,
+    Payasan.Base.Internal.ABCOutput,
+    Payasan.Base.Internal.ABCOutTrans,
+    Payasan.Base.Internal.ABCParser,
+    Payasan.Base.Internal.ABCSpelling,
+    Payasan.Base.Internal.ABCSyntax,
+    Payasan.Base.Internal.ABCUtils,
+    Payasan.Base.Internal.AddBeams,
+    Payasan.Base.Internal.BracketSyntax,
+    Payasan.Base.Internal.BracketTrans,
+    Payasan.Base.Internal.CommonSyntax,
+    Payasan.Base.Internal.MainSyntax,
     Payasan.Base.Internal.Utils,
-    Payasan.Base.Names.Chord,
-    Payasan.Base.Names.Duration,
-    Payasan.Base.Names.GeneralMidiDrums,
-    Payasan.Base.Names.GeneralMidiInstruments,
-    Payasan.Base.Names.Interval,   
-    Payasan.Base.Names.Pitch,
-    Payasan.Base.Shim,
-    Payasan.Models.Djembe,
-    Payasan.Models.Djembe.Base,
-    Payasan.Models.Djembe.Interpret,
-    Payasan.Models.Djembe.Parser,
-    Payasan.Models.Metronome,
-    Payasan.Models.Metronome.Base,
-    Payasan.Models.Metronome.Interpret,
-    Payasan.Symbolic.SimpleNoteList,
-    Payasan.Symbolic.SimpleNoteList.Base,
-    Payasan.Symbolic.SimpleNoteList.Interpret,
-    Payasan.Symbolic.SimpleNoteList.Parser
-
-
-
+    Payasan.Base.Notelist,
+    Payasan.Base.NoteNames,
+    Payasan.Base.Pitch
+    
 
   other-modules:
-
+     
   extensions:
     
 
