Updated cabal file so Haddock docs build and I can use Haddock to navigate the source. Removed Payasan.Models.Lyrics.Monad - it was a unsuccessful experiment. Moved Payasan.Models.Lyrics.Plain to Payasan.Models.Lyrics.Internal.Plain.

--- a/payasan.cabal
+++ b/payasan.cabal
@@ -6,10 +6,10 @@ copyright:        Stephen Tetley <stephen.tetley@gmail.com>
 maintainer:       Stephen Tetley <stephen.tetley@gmail.com>
 homepage:         http://code.google.com/p/copperbox/
 category:         Music
-synopsis:         DSL for music composition / MIDI.
+synopsis:         Framework for music composition / song writing
 description:
   .
-  DSL for music composition / MIDI.
+  Framework for music composition / song writing.
   .
   (c) Stephen Tetley 2015
   .
@@ -26,28 +26,120 @@ library
   hs-source-dirs:     src
   build-depends:      base,
                       containers,
+                      directory,
+                      filepath,
                       template-haskell,
                       pretty,
+                      mtl,
+                      text,
                       parsec       >= 3.1   && <= 4.0,
-
+                      zmidi-core
   exposed-modules:
     Payasan.Base.Duration,
-    Payasan.Base.Internal.ABCInTrans,
-    Payasan.Base.Internal.ABCOutput,
-    Payasan.Base.Internal.ABCOutTrans,
-    Payasan.Base.Internal.ABCParser,
-    Payasan.Base.Internal.ABCSpelling,
-    Payasan.Base.Internal.ABCSyntax,
-    Payasan.Base.Internal.ABCUtils,
+    Payasan.Base.Internal.ABC.InTrans,
+    Payasan.Base.Internal.ABC.Lexer,
+    Payasan.Base.Internal.ABC.Output,
+    Payasan.Base.Internal.ABC.OutTrans,
+    Payasan.Base.Internal.ABC.Parser,
+    Payasan.Base.Internal.ABC.Syntax,
+    Payasan.Base.Internal.ABC.Utils,
     Payasan.Base.Internal.AddBeams,
-    Payasan.Base.Internal.BracketSyntax,
-    Payasan.Base.Internal.BracketTrans,
+    Payasan.Base.Internal.BeamSyntax,
+    Payasan.Base.Internal.BeamToMain,
+    Payasan.Base.Internal.BeamTraversals,
     Payasan.Base.Internal.CommonSyntax,
+    Payasan.Base.Internal.Csound.BeamToCsound,
+    Payasan.Base.Internal.Csound.IStmt,
+    Payasan.Base.Internal.Csound.Output,
+    Payasan.Base.Internal.Csound.OutTrans,
+    Payasan.Base.Internal.Csound.Syntax,
+    Payasan.Base.Internal.LilyPond.InTrans,
+    Payasan.Base.Internal.LilyPond.Lexer,
+    Payasan.Base.Internal.LilyPond.OutTrans,
+    Payasan.Base.Internal.LilyPond.Parser,
+    Payasan.Base.Internal.LilyPond.Quasiquote,
+    Payasan.Base.Internal.LilyPond.RhythmicMarkup,
+    Payasan.Base.Internal.LilyPond.SimpleOutput,
+    Payasan.Base.Internal.LilyPond.Syntax,
+    Payasan.Base.Internal.LilyPond.Utils,
     Payasan.Base.Internal.MainSyntax,
+    Payasan.Base.Internal.MainToBeam,
+    Payasan.Base.Internal.MIDI.BeamToMIDI,
+    Payasan.Base.Internal.MIDI.Output,
+    Payasan.Base.Internal.MIDI.OutTrans,
+    Payasan.Base.Internal.MIDI.PrimitiveSyntax,
+    Payasan.Base.Internal.Output.Common,
+    Payasan.Base.Internal.Output.Linear.OutputBeam,
+    Payasan.Base.Internal.Output.Linear.OutputMain,
+    Payasan.Base.Internal.Output.Linear.Utils,
+    Payasan.Base.Internal.Output.Tabular.OutputBeam,
+    Payasan.Base.Internal.Output.Tabular.OutputMain,
+    Payasan.Base.Internal.Output.Tabular.Utils,
+    Payasan.Base.Internal.Pipeline,
+    Payasan.Base.Internal.Plain,
+    Payasan.Base.Internal.RewriteMonad,
+    Payasan.Base.Internal.Scale,
+    Payasan.Base.Internal.Shell,
+    Payasan.Base.Internal.TiedNoteStream,
     Payasan.Base.Internal.Utils,
+    Payasan.Base.Monophonic.Notelist,
+    Payasan.Base.Monophonic.Internal.ABCInTrans,
+    Payasan.Base.Monophonic.Internal.ABCParser,
+    Payasan.Base.Monophonic.Internal.LilyPondInTrans,
+    Payasan.Base.Monophonic.Internal.LilyPondParser,
+    Payasan.Base.Monophonic.Internal.LilyPondQuasiquote,
+    Payasan.Base.Monophonic.Internal.LinearOutput,
+    Payasan.Base.Monophonic.Internal.Metrics,
+    Payasan.Base.Monophonic.Internal.MonoToMain,
+    Payasan.Base.Monophonic.Internal.Plain,
+    Payasan.Base.Monophonic.Internal.RecalcBars,
+    Payasan.Base.Monophonic.Internal.Syntax,
+    Payasan.Base.Monophonic.Internal.TabularOutput,
+    Payasan.Base.Monophonic.Internal.Transform,
+    Payasan.Base.Monophonic.Internal.Traversals,
+    Payasan.Base.Names.Chord,
+    Payasan.Base.Names.DiatonicInterval,
+    Payasan.Base.Names.Duration,
+    Payasan.Base.Names.GeneralMidiDrums,
+    Payasan.Base.Names.GeneralMidiInstruments,
+    Payasan.Base.Names.Interval,
+    Payasan.Base.Names.Key,
+    Payasan.Base.Names.Pitch,
     Payasan.Base.Notelist,
-    Payasan.Base.NoteNames,
-    Payasan.Base.Pitch
+    Payasan.Base.Pitch,
+    Payasan.Base.ScaleDegree,
+    Payasan.LilyPond.Chordmode.Notelist,
+    Payasan.LilyPond.Chordmode.Internal.Base,
+    Payasan.LilyPond.Chordmode.Internal.Interpret,
+    Payasan.LilyPond.Chordmode.Internal.InTrans,
+    Payasan.LilyPond.Chordmode.Internal.Output,
+    Payasan.LilyPond.Chordmode.Internal.OutTrans,
+    Payasan.LilyPond.Chordmode.Internal.Parser,
+    Payasan.LilyPond.FretDiagram.Notelist,
+    Payasan.LilyPond.FretDiagram.Internal.Base,
+    Payasan.LilyPond.FretDiagram.Internal.Interpret,
+    Payasan.LilyPond.FretDiagram.Internal.Output,
+    Payasan.LilyPond.FretDiagram.Internal.Parser,
+    Payasan.LilyPond.FretDiagram.Internal.Plain,
+    Payasan.LilyPond.Lyricmode.Notelist,
+    Payasan.LilyPond.Lyricmode.Internal.Base,
+    Payasan.LilyPond.Lyricmode.Internal.Interpret,
+    Payasan.LilyPond.Lyricmode.Internal.Output,
+    Payasan.LilyPond.Lyricmode.Internal.Parser,
+    Payasan.LilyPond.Percussion.Notelist,
+    Payasan.LilyPond.Percussion.Internal.Base,
+    Payasan.LilyPond.Percussion.Internal.Output,
+    Payasan.LilyPond.Percussion.Internal.Parser,
+    Payasan.LilyPond.Percussion.Internal.PitchTrans,
+    Payasan.Models.Base.Classes,
+    Payasan.Models.Base.Z12,
+    Payasan.Models.Chords.Base,
+    Payasan.Models.Lyrics.Internal.Base,
+    Payasan.Models.Lyrics.Internal.Plain,
+    Payasan.Models.Lyrics.Internal.Syllable,
+    Payasan.Models.Polyrhythms.Base,
+    Payasan.Models.UTT.Base
+
     
 
   other-modules:
