Added translation from Cadenza syntax to Mono syntax. Beam grouping is lost in the translation. Beams are _recovered_ if they fit the meter pattern, but usual beam grouping may be lost.

--- a/payasan.cabal
+++ b/payasan.cabal
@@ -106,6 +106,13 @@ library
     Payasan.Base.Notelist,
     Payasan.Base.Pitch,
     Payasan.Base.ScaleDegree,
+    Payasan.LilyPond.Cadenza.Notelist,
+    Payasan.LilyPond.Cadenza.Internal.CadenzaToBeam,
+    Payasan.LilyPond.Cadenza.Internal.CadenzaToMono,
+    Payasan.LilyPond.Cadenza.Internal.InTrans,
+    Payasan.LilyPond.Cadenza.Internal.Parser,
+    Payasan.LilyPond.Cadenza.Internal.Syntax,
+    Payasan.LilyPond.Cadenza.Internal.Traversals,
     Payasan.LilyPond.Chordmode.Notelist,
     Payasan.LilyPond.Chordmode.Internal.Base,
     Payasan.LilyPond.Chordmode.Internal.Interpret,
