Adding files missed in previous commit.

--- a/payasan.cabal
+++ b/payasan.cabal
@@ -48,6 +48,7 @@ library
     Payasan.Base.Internal.BeamToMain,
     Payasan.Base.Internal.BeamTraversals,
     Payasan.Base.Internal.CommonSyntax,
+    Payasan.Base.Internal.Contour,
     Payasan.Base.Internal.Csound.BeamToCsound,
     Payasan.Base.Internal.Csound.IStmt,
     Payasan.Base.Internal.Csound.Output,
@@ -110,9 +111,11 @@ library
     Payasan.LilyPond.Cadenza.Internal.CadenzaToBeam,
     Payasan.LilyPond.Cadenza.Internal.CadenzaToMono,
     Payasan.LilyPond.Cadenza.Internal.InTrans,
+    Payasan.LilyPond.Cadenza.Internal.Metrics,
     Payasan.LilyPond.Cadenza.Internal.Parser,
     Payasan.LilyPond.Cadenza.Internal.Syntax,
     Payasan.LilyPond.Cadenza.Internal.Traversals,
+    Payasan.LilyPond.Cadenza.Internal.Transform,
     Payasan.LilyPond.Chordmode.Notelist,
     Payasan.LilyPond.Chordmode.Internal.Base,
     Payasan.LilyPond.Chordmode.Internal.Interpret,
