Updated internal naming that used _Mono_ to use _Elem_.

--- a/payasan.cabal
+++ b/payasan.cabal
@@ -36,6 +36,20 @@ library
                       zmidi-core
   exposed-modules:
     Payasan.Base.Duration,
+    Payasan.Base.Elementary.Notelist,
+    Payasan.Base.Elementary.Internal.ABCInTrans,
+    Payasan.Base.Elementary.Internal.ABCParser,
+    Payasan.Base.Elementary.Internal.LilyPondInTrans,
+    Payasan.Base.Elementary.Internal.LilyPondParser,
+    Payasan.Base.Elementary.Internal.LinearOutput,
+    Payasan.Base.Elementary.Internal.Metrics,
+    Payasan.Base.Elementary.Internal.ElementaryToMain,
+    Payasan.Base.Elementary.Internal.Plain,
+    Payasan.Base.Elementary.Internal.RecalcBars,
+    Payasan.Base.Elementary.Internal.Syntax,
+    Payasan.Base.Elementary.Internal.TabularOutput,
+    Payasan.Base.Elementary.Internal.Transform,
+    Payasan.Base.Elementary.Internal.Traversals,
     Payasan.Base.Internal.ABC.InTrans,
     Payasan.Base.Internal.ABC.Lexer,
     Payasan.Base.Internal.ABC.Output,
@@ -82,20 +96,6 @@ library
     Payasan.Base.Internal.Shell,
     Payasan.Base.Internal.TiedNoteStream,
     Payasan.Base.Internal.Utils,
-    Payasan.Base.Monophonic.Notelist,
-    Payasan.Base.Monophonic.Internal.ABCInTrans,
-    Payasan.Base.Monophonic.Internal.ABCParser,
-    Payasan.Base.Monophonic.Internal.LilyPondInTrans,
-    Payasan.Base.Monophonic.Internal.LilyPondParser,
-    Payasan.Base.Monophonic.Internal.LinearOutput,
-    Payasan.Base.Monophonic.Internal.Metrics,
-    Payasan.Base.Monophonic.Internal.MonoToMain,
-    Payasan.Base.Monophonic.Internal.Plain,
-    Payasan.Base.Monophonic.Internal.RecalcBars,
-    Payasan.Base.Monophonic.Internal.Syntax,
-    Payasan.Base.Monophonic.Internal.TabularOutput,
-    Payasan.Base.Monophonic.Internal.Transform,
-    Payasan.Base.Monophonic.Internal.Traversals,
     Payasan.Base.Names.Chord,
     Payasan.Base.Names.DiatonicInterval,
     Payasan.Base.Names.Duration,
@@ -109,7 +109,7 @@ library
     Payasan.Base.ScaleDegree,
     Payasan.LilyPond.Cadenza.Notelist,
     Payasan.LilyPond.Cadenza.Internal.CadenzaToBeam,
-    Payasan.LilyPond.Cadenza.Internal.CadenzaToMono,
+    Payasan.LilyPond.Cadenza.Internal.CadenzaToElementary,
     Payasan.LilyPond.Cadenza.Internal.InTrans,
     Payasan.LilyPond.Cadenza.Internal.Metrics,
     Payasan.LilyPond.Cadenza.Internal.Parser,
