Preliminary work on an Anchor datatype. Anchors are a key feature of TikZ for labelling positions on a shape, they should be able to support a similar purpose in Paysan for labelling positions in a melody.

--- a/payasan.cabal
+++ b/payasan.cabal
@@ -59,11 +59,11 @@ library
     Payasan.Base.Internal.ABC.Syntax,
     Payasan.Base.Internal.ABC.Utils,
     Payasan.Base.Internal.AddBeams,
+    Payasan.Base.Internal.AnalysisCommon,
     Payasan.Base.Internal.BeamSyntax,
     Payasan.Base.Internal.BeamToMain,
     Payasan.Base.Internal.BeamTraversals,
     Payasan.Base.Internal.CommonSyntax,
-    Payasan.Base.Internal.Contour,
     Payasan.Base.Internal.Csound.BeamToCsound,
     Payasan.Base.Internal.Csound.IStmt,
     Payasan.Base.Internal.Csound.Output,
