Changed module name Payasan.Base.Internal.CommonSyntax to Payasan.Base.Internal.SyntaxCommon. This is a prelude to substantial changes to the module organization.

--- a/payasan.cabal
+++ b/payasan.cabal
@@ -51,6 +51,7 @@ library
     Payasan.Base.Elementary.Internal.TabularOutput,
     Payasan.Base.Elementary.Internal.Transform,
     Payasan.Base.Elementary.Internal.Traversals,
+    Payasan.Base.Elementary.Internal.Zipper,
     Payasan.Base.Internal.ABC.InTrans,
     Payasan.Base.Internal.ABC.Lexer,
     Payasan.Base.Internal.ABC.Output,
@@ -63,7 +64,7 @@ library
     Payasan.Base.Internal.BeamSyntax,
     Payasan.Base.Internal.BeamToMain,
     Payasan.Base.Internal.BeamTraversals,
-    Payasan.Base.Internal.CommonSyntax,
+    Payasan.Base.Internal.SyntaxCommon,
     Payasan.Base.Internal.Csound.BeamToCsound,
     Payasan.Base.Internal.Csound.IStmt,
     Payasan.Base.Internal.Csound.Output,
