--- a/payasan.cabal
+++ b/payasan.cabal
@@ -49,11 +49,6 @@ library
     Payasan.Base.Internal.BeamToMain,
     Payasan.Base.Internal.BeamTraversals,
     Payasan.Base.Internal.SyntaxCommon,
-    Payasan.Base.Internal.Csound.BeamToCsound,
-    Payasan.Base.Internal.Csound.IStmt,
-    Payasan.Base.Internal.Csound.Output,
-    Payasan.Base.Internal.Csound.OutTrans,
-    Payasan.Base.Internal.Csound.Syntax,
     Payasan.Base.Internal.LilyPond.InTrans,
     Payasan.Base.Internal.LilyPond.Lexer,
     Payasan.Base.Internal.LilyPond.OutTrans,
@@ -132,6 +127,11 @@ library
     Payasan.Score.Cadenza.Internal.Syntax,
     Payasan.Score.Cadenza.Internal.Traversals,
     Payasan.Score.Cadenza.Internal.Transform,
+    Payasan.Score.Csound.Internal.BeamToCsound,
+    Payasan.Score.Csound.Internal.IStmt,
+    Payasan.Score.Csound.Internal.Output,
+    Payasan.Score.Csound.Internal.OutTrans,
+    Payasan.Score.Csound.Internal.Syntax,
     Payasan.Score.Elementary.Notelist,
     Payasan.Score.Elementary.Internal.ABCInTrans,
     Payasan.Score.Elementary.Internal.ABCParser,
