Moving the MIDI modules into Payasan.Backend.MIDI.

--- a/payasan.cabal
+++ b/payasan.cabal
@@ -40,6 +40,10 @@ library
     Payasan.Backend.Csound.Internal.Output,
     Payasan.Backend.Csound.Internal.OutTrans,
     Payasan.Backend.Csound.Internal.Syntax,
+    Payasan.Backend.MIDI.Internal.BeamToMIDI,
+    Payasan.Backend.MIDI.Internal.Output,
+    Payasan.Backend.MIDI.Internal.OutTrans,
+    Payasan.Backend.MIDI.Internal.PrimitiveSyntax,
     Payasan.Base.Duration,
     Payasan.Base.Internal.ABC.InTrans,
     Payasan.Base.Internal.ABC.Lexer,
@@ -64,10 +68,6 @@ library
     Payasan.Base.Internal.LilyPond.Utils,
     Payasan.Base.Internal.MainSyntax,
     Payasan.Base.Internal.MainToBeam,
-    Payasan.Base.Internal.MIDI.BeamToMIDI,
-    Payasan.Base.Internal.MIDI.Output,
-    Payasan.Base.Internal.MIDI.OutTrans,
-    Payasan.Base.Internal.MIDI.PrimitiveSyntax,
     Payasan.Base.Internal.Output.Common,
     Payasan.Base.Internal.Output.Linear.OutputBeam,
     Payasan.Base.Internal.Output.Linear.OutputMain,
