Moved Beam syntax modules into the Payasan.Repr.IRBeam namespace.

--- a/payasan.cabal
+++ b/payasan.cabal
@@ -52,11 +52,8 @@ library
     Payasan.Base.Internal.ABC.Parser,
     Payasan.Base.Internal.ABC.Syntax,
     Payasan.Base.Internal.ABC.Utils,
-    Payasan.Base.Internal.AddBeams,
     Payasan.Base.Internal.AnalysisCommon,
-    Payasan.Base.Internal.BeamSyntax,
     Payasan.Base.Internal.BeamToMain,
-    Payasan.Base.Internal.BeamTraversals,
     Payasan.Base.Internal.SyntaxCommon,
     Payasan.Base.Internal.LilyPond.InTrans,
     Payasan.Base.Internal.LilyPond.Lexer,
@@ -80,7 +77,6 @@ library
     Payasan.Base.Internal.RewriteMonad,
     Payasan.Base.Internal.Scale,
     Payasan.Base.Internal.Shell,
-    Payasan.Base.Internal.TiedNoteStream,
     Payasan.Base.Internal.Utils,
     Payasan.Base.Names.Chord,
     Payasan.Base.Names.DiatonicInterval,
@@ -123,6 +119,10 @@ library
     Payasan.Models.Lyrics.Internal.Syllable,
     Payasan.Models.Polyrhythms.Base,
     Payasan.Models.UTT.Base,
+    Payasan.Repr.IRBeam.AddBeams,
+    Payasan.Repr.IRBeam.Syntax,
+    Payasan.Repr.IRBeam.TiedNoteStream,
+    Payasan.Repr.IRBeam.Traversals,
     Payasan.Score.Cadenza.Notelist,
     Payasan.Score.Cadenza.Internal.CadenzaToBeam,
     Payasan.Score.Cadenza.Internal.CadenzaToElementary,
