Moved Main syntax into Payasan.Repr.External namespace. Naming - _Main_ is now _External_.

--- a/payasan.cabal
+++ b/payasan.cabal
@@ -53,7 +53,6 @@ library
     Payasan.Base.Internal.ABC.Syntax,
     Payasan.Base.Internal.ABC.Utils,
     Payasan.Base.Internal.AnalysisCommon,
-    Payasan.Base.Internal.BeamToMain,
     Payasan.Base.Internal.SyntaxCommon,
     Payasan.Base.Internal.LilyPond.InTrans,
     Payasan.Base.Internal.LilyPond.Lexer,
@@ -63,8 +62,6 @@ library
     Payasan.Base.Internal.LilyPond.SimpleOutput,
     Payasan.Base.Internal.LilyPond.Syntax,
     Payasan.Base.Internal.LilyPond.Utils,
-    Payasan.Base.Internal.MainSyntax,
-    Payasan.Base.Internal.MainToBeam,
     Payasan.Base.Internal.Output.Common,
     Payasan.Base.Internal.Output.Linear.OutputBeam,
     Payasan.Base.Internal.Output.Linear.OutputMain,
@@ -73,7 +70,6 @@ library
     Payasan.Base.Internal.Output.Tabular.OutputMain,
     Payasan.Base.Internal.Output.Tabular.Utils,
     Payasan.Base.Internal.Pipeline,
-    Payasan.Base.Internal.Plain,
     Payasan.Base.Internal.RewriteMonad,
     Payasan.Base.Internal.Scale,
     Payasan.Base.Internal.Shell,
@@ -119,6 +115,10 @@ library
     Payasan.Models.Lyrics.Internal.Syllable,
     Payasan.Models.Polyrhythms.Base,
     Payasan.Models.UTT.Base,
+    Payasan.Repr.ExternalToIRBeam,
+    Payasan.Repr.IRBeamToExternal,
+    Payasan.Repr.External.Plain,
+    Payasan.Repr.External.Syntax,
     Payasan.Repr.IRBeam.AddBeams,
     Payasan.Repr.IRBeam.Syntax,
     Payasan.Repr.IRBeam.TiedNoteStream,
@@ -140,7 +140,7 @@ library
     Payasan.Score.Elementary.Internal.LilyPondParser,
     Payasan.Score.Elementary.Internal.LinearOutput,
     Payasan.Score.Elementary.Internal.Metrics,
-    Payasan.Score.Elementary.Internal.ElementaryToMain,
+    Payasan.Score.Elementary.Internal.ElementaryToExternal,
     Payasan.Score.Elementary.Internal.Operations,
     Payasan.Score.Elementary.Internal.Plain,
     Payasan.Score.Elementary.Internal.RecalcBars,
