Moved Payasan.Repr and Payasan.Backend modules into the Payasan.PSC namespace. The main focus of this round of refactoring is to organise the code as a (kind of) compiler. PSC stands for Payasan Score Compiler.

--- a/payasan.cabal
+++ b/payasan.cabal
@@ -35,15 +35,6 @@ library
                       parsec       >= 3.1   && <= 4.0,
                       zmidi-core
   exposed-modules:
-    Payasan.Backend.Csound.Internal.BeamToCsound,
-    Payasan.Backend.Csound.Internal.IStmt,
-    Payasan.Backend.Csound.Internal.Output,
-    Payasan.Backend.Csound.Internal.OutTrans,
-    Payasan.Backend.Csound.Internal.Syntax,
-    Payasan.Backend.MIDI.Internal.BeamToMIDI,
-    Payasan.Backend.MIDI.Internal.Output,
-    Payasan.Backend.MIDI.Internal.OutTrans,
-    Payasan.Backend.MIDI.Internal.PrimitiveSyntax,
     Payasan.Base.Duration,
     Payasan.Base.Internal.ABC.InTrans,
     Payasan.Base.Internal.ABC.Lexer,
@@ -115,14 +106,23 @@ library
     Payasan.Models.Lyrics.Internal.Syllable,
     Payasan.Models.Polyrhythms.Base,
     Payasan.Models.UTT.Base,
-    Payasan.Repr.ExternalToIRBeam,
-    Payasan.Repr.IRBeamToExternal,
-    Payasan.Repr.External.Plain,
-    Payasan.Repr.External.Syntax,
-    Payasan.Repr.IRBeam.AddBeams,
-    Payasan.Repr.IRBeam.Syntax,
-    Payasan.Repr.IRBeam.TiedNoteStream,
-    Payasan.Repr.IRBeam.Traversals,
+    Payasan.PSC.Backend.Csound.Internal.BeamToCsound,
+    Payasan.PSC.Backend.Csound.Internal.IStmt,
+    Payasan.PSC.Backend.Csound.Internal.Output,
+    Payasan.PSC.Backend.Csound.Internal.OutTrans,
+    Payasan.PSC.Backend.Csound.Internal.Syntax,
+    Payasan.PSC.Backend.MIDI.Internal.BeamToMIDI,
+    Payasan.PSC.Backend.MIDI.Internal.Output,
+    Payasan.PSC.Backend.MIDI.Internal.OutTrans,
+    Payasan.PSC.Backend.MIDI.Internal.PrimitiveSyntax,
+    Payasan.PSC.Repr.ExternalToIRBeam,
+    Payasan.PSC.Repr.IRBeamToExternal,
+    Payasan.PSC.Repr.External.Plain,
+    Payasan.PSC.Repr.External.Syntax,
+    Payasan.PSC.Repr.IRBeam.AddBeams,
+    Payasan.PSC.Repr.IRBeam.Syntax,
+    Payasan.PSC.Repr.IRBeam.TiedNoteStream,
+    Payasan.PSC.Repr.IRBeam.Traversals,
     Payasan.Score.Cadenza.Notelist,
     Payasan.Score.Cadenza.Internal.CadenzaToBeam,
     Payasan.Score.Cadenza.Internal.CadenzaToElementary,
