More module moves into the new namespaces.

--- a/payasan.cabal
+++ b/payasan.cabal
@@ -37,11 +37,8 @@ library
   exposed-modules:
     Payasan.Base.Duration,
     Payasan.Base.Internal.AnalysisCommon,
-    Payasan.Base.Internal.SyntaxCommon,
-    Payasan.Base.Internal.Pipeline,
-    Payasan.Base.Internal.RewriteMonad,
+    Payasan.Base.Internal.AnalysisTrace,
     Payasan.Base.Internal.Scale,
-    Payasan.Base.Internal.Shell,
     Payasan.Base.Internal.Utils,
     Payasan.Base.Names.Chord,
     Payasan.Base.Names.DiatonicInterval,
@@ -51,7 +48,6 @@ library
     Payasan.Base.Names.Interval,
     Payasan.Base.Names.Key,
     Payasan.Base.Names.Pitch,
-    Payasan.Base.Notelist,
     Payasan.Base.Pitch,
     Payasan.LilyPond.Chordmode.Notelist,
     Payasan.LilyPond.Chordmode.Internal.Base,
@@ -115,6 +111,10 @@ library
     Payasan.PSC.Backend.Output.Tabular.OutputBeam,
     Payasan.PSC.Backend.Output.Tabular.OutputMain,
     Payasan.PSC.Backend.Output.Tabular.Utils,
+    Payasan.PSC.Base.RewriteMonad,
+    Payasan.PSC.Base.SyntaxCommon,
+    Payasan.PSC.Notelist,
+    Payasan.PSC.Pipeline,
     Payasan.PSC.Repr.ExternalToIRBeam,
     Payasan.PSC.Repr.IRBeamToExternal,
     Payasan.PSC.Repr.External.Plain,
@@ -123,6 +123,7 @@ library
     Payasan.PSC.Repr.IRBeam.Syntax,
     Payasan.PSC.Repr.IRBeam.TiedNoteStream,
     Payasan.PSC.Repr.IRBeam.Traversals,
+    Payasan.PSC.Shell,
     Payasan.Score.Cadenza.Notelist,
     Payasan.Score.Cadenza.Internal.CadenzaToBeam,
     Payasan.Score.Cadenza.Internal.CadenzaToElementary,
