Moved LilyPond and ABC parser modules out of Payasan.PSC.Backend.__ hierarchy. The parsers should produce External syntax rather IRBeam so they don't belong in _Backend_. Actually work to produce External has not been coded yet.

--- a/payasan.cabal
+++ b/payasan.cabal
@@ -82,10 +82,8 @@ library
     Payasan.Models.Polyrhythms.Base,
     Payasan.Models.UTT.Base,
     Payasan.PSC.Backend.ABC.InTrans,
-    Payasan.PSC.Backend.ABC.Lexer,
     Payasan.PSC.Backend.ABC.Output,
     Payasan.PSC.Backend.ABC.OutTrans,
-    Payasan.PSC.Backend.ABC.Parser,
     Payasan.PSC.Backend.ABC.Syntax,
     Payasan.PSC.Backend.ABC.Utils,
     Payasan.PSC.Backend.Csound.BeamToCsound,
@@ -94,9 +92,7 @@ library
     Payasan.PSC.Backend.Csound.OutTrans,
     Payasan.PSC.Backend.Csound.Syntax,
     Payasan.PSC.Backend.LilyPond.InTrans,
-    Payasan.PSC.Backend.LilyPond.Lexer,
     Payasan.PSC.Backend.LilyPond.OutTrans,
-    Payasan.PSC.Backend.LilyPond.Parser,
     Payasan.PSC.Backend.LilyPond.RhythmicMarkup,
     Payasan.PSC.Backend.LilyPond.SimpleOutput,
     Payasan.PSC.Backend.LilyPond.Syntax,
@@ -112,6 +108,8 @@ library
     Payasan.PSC.Backend.Output.Tabular.OutputBeam,
     Payasan.PSC.Backend.Output.Tabular.OutputMain,
     Payasan.PSC.Backend.Output.Tabular.Utils,
+    Payasan.PSC.Base.ABCLexer,
+    Payasan.PSC.Base.LilyPondLexer,
     Payasan.PSC.Base.RewriteMonad,
     Payasan.PSC.Base.SyntaxCommon,
     Payasan.PSC.Notelist,
