Making concrete syntax read ABC and LilyPond into External representation rather than the internal IRBeam representation. Some functions have been stubbed out to get them to type check. They will throw runtime errors.

--- a/payasan.cabal
+++ b/payasan.cabal
@@ -81,7 +81,6 @@ library
     Payasan.Models.Lyrics.Internal.Syllable,
     Payasan.Models.Polyrhythms.Base,
     Payasan.Models.UTT.Base,
-    Payasan.PSC.Backend.ABC.InTrans,
     Payasan.PSC.Backend.ABC.Output,
     Payasan.PSC.Backend.ABC.OutTrans,
     Payasan.PSC.Backend.ABC.Syntax,
@@ -91,7 +90,6 @@ library
     Payasan.PSC.Backend.Csound.Output,
     Payasan.PSC.Backend.Csound.OutTrans,
     Payasan.PSC.Backend.Csound.Syntax,
-    Payasan.PSC.Backend.LilyPond.InTrans,
     Payasan.PSC.Backend.LilyPond.OutTrans,
     Payasan.PSC.Backend.LilyPond.RhythmicMarkup,
     Payasan.PSC.Backend.LilyPond.SimpleOutput,
@@ -108,7 +106,9 @@ library
     Payasan.PSC.Backend.Output.Tabular.OutputBeam,
     Payasan.PSC.Backend.Output.Tabular.OutputMain,
     Payasan.PSC.Backend.Output.Tabular.Utils,
+    Payasan.PSC.Base.ABCCommon,
     Payasan.PSC.Base.ABCLexer,
+    Payasan.PSC.Base.LilyPondCommon,
     Payasan.PSC.Base.LilyPondLexer,
     Payasan.PSC.Base.RewriteMonad,
     Payasan.PSC.Base.SyntaxCommon,
@@ -116,8 +116,13 @@ library
     Payasan.PSC.Pipeline,
     Payasan.PSC.Repr.ExternalToIRBeam,
     Payasan.PSC.Repr.IRBeamToExternal,
+    Payasan.PSC.Repr.External.ABCInTrans,
+    Payasan.PSC.Repr.External.ABCParser,
+    Payasan.PSC.Repr.External.LilyPondInTrans,
+    Payasan.PSC.Repr.External.LilyPondParser,
     Payasan.PSC.Repr.External.Plain,
     Payasan.PSC.Repr.External.Syntax,
+    Payasan.PSC.Repr.External.Traversals,
     Payasan.PSC.Repr.IRBeam.AddBeams,
     Payasan.PSC.Repr.IRBeam.Syntax,
     Payasan.PSC.Repr.IRBeam.TiedNoteStream,
