Removed Payasan.Models.Base. Z12 module goes into Payasan.Base, Classes module is removed.

--- a/payasan.cabal
+++ b/payasan.cabal
@@ -50,6 +50,7 @@ library
     Payasan.Base.Pitch,
     Payasan.Base.Scale,
     Payasan.Base.Utils,
+    Payasan.Base.Z12,
     Payasan.LilyPond.Chordmode.Notelist,
     Payasan.LilyPond.Chordmode.Internal.Base,
     Payasan.LilyPond.Chordmode.Internal.Interpret,
@@ -73,8 +74,6 @@ library
     Payasan.LilyPond.Percussion.Internal.Output,
     Payasan.LilyPond.Percussion.Internal.Parser,
     Payasan.LilyPond.Percussion.Internal.PitchTrans,
-    Payasan.Models.Base.Classes,
-    Payasan.Models.Base.Z12,
     Payasan.Models.Chords.Base,
     Payasan.Models.Lyrics.Internal.Base,
     Payasan.Models.Lyrics.Internal.Plain,
